--- a/COMPOSED2.ipynb
+++ b/COMPOSED2.ipynb
@@ -163,6 +163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://onlinesequencer.net/import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
